# godot-component-system

./: .gitignore  Cargo.toml  LICENSE  README.md  SCsub  build.rs  config.py  register_types.cpp  register_types.h
cxxbridge/: NOTICE.txt
cxxbridge/include/: component.rs.h  component_data.rs.h  component_definition.rs.h  component_field_definition.rs.h  component_value.rs.h  ecs_world.rs.h  entity.rs.h  lib.rs.h  string.rs.h  string_name.rs.h  variant.rs.h
cxxbridge/src/: component.rs.cpp  component_data.rs.cpp  component_definition.rs.cpp  component_field_definition.rs.cpp  component_value.rs.cpp  ecs_world.rs.cpp  entity.rs.cpp  (+2 more)
gcs/: Cargo.toml
gcs-cxx/: Cargo.toml  build.rs
gcs-cxx/include/godot/: string.h  variant.h
gcs-cxx/src/: component.rs  ecs_world.rs  entity.rs  godot.rs  lib.rs  world.rs
gcs-cxx/src/component/: component_data.rs  component_definition.rs  component_info.rs  component_value.rs
gcs-cxx/src/godot/: string.cpp  variant.cpp  variant.rs
gcs-cxx/src/world/: ecs_world.rs  gcs_world.rs
include/: component.h  component_definition.h  component_field_definition.h  component_info.h  ecs_world_2d.h  ecs_world_base.h  entity.h  gcs_world_2d.h  gcs_world_base.h  object.h  string_name.h  variant.h
model/: ClassDiagram.puml  Component.puml
src/: component.cpp  component.rs  component_definition.cpp  component_field_definition.cpp  component_info.cpp  ecs_world.rs  ecs_world_2d.cpp  ecs_world_base.cpp  entity.cpp  entity.rs  gcs_world_2d.cpp  gcs_world_base.cpp  godot.rs  lib.rs  object.cpp  string.cpp  string_name.cpp  variant.cpp
(+28 files in other folders)
