[package]
name = "gcs-cxx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
gcs = {path = "../gcs"}
cxx = "1.0"
uuid = {version = "0.8", features=["serde", "v4", "wasm-bindgen"]}

[build-dependencies]
cxx-build = "1.0"